GNOME Bugzilla – Bug 738169
librsvg hang
Last modified: 2015-09-03 17:37:13 UTC
Created attachment 288065 [details] Repro-file package Tested on: OS: Ubuntu 12.04 librsvg: ASAN build version 2.36.1 The attached repro-file causes rsvg-convert, rsvg-view-3 and nautilus (svg preview enabled), to hang indefinitely.
The SVG has these: <linearGradient id="cycle2" xlink:href="#cycle1"> <stop offset="0" stop-color="red" /> <stop offset="1" stop-color="orange" /> </linearGradient> <linearGradient id="cycle1" xlink:href="#cycle2"/> And the functions that resolve a chain of gradient properties end up in an infinite loop, since the gradients reference each other. I'll fix this.
Created attachment 296299 [details] [review] Handle cycles in the references for paint servers This fixes the bug.
Fixed in commit 8ee18b22ece0f869cb4e2e021c01138cbb8a0226