bgo#738169 - Avoid cycles while resolving paint server fallbacks

If a chain of paint servers, defined through the xlink:href attribute, has a cycle,
then we would loop infinitely while resolving the base paint server.  We now
use a tortoise-and-hare to detect cycles and stop appropriately.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=738169

Signed-off-by: Federico Mena Quintero <federico@gnome.org>